applications/sample-react-app/templates/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
  labels:
    app: react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
      - name: react
        image: eu.gcr.io/gcfr-352018/sample-react-app:M-849b5c2-20220704
