applications/sample-react-app/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
  labels:
    app: react
spec:
  type: ClusterIP
  selector:
    app: react
  ports:
  - port: 8080
    targetPort: 3000
